force-app/main/default/objects/HealthCloudGA__ContactContactRelation__c/fields/Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Status__c</fullName>
    <label>Relationship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Related</fullName>
            </value>
            <value>
                <fullName>Not Related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>