force-app/main/default/objects/HealthCloudGA__ContactContactRelation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Caller</fullName>
            </value>
            <value>
                <fullName>Couple Household</fullName>
            </value>
            <value>
                <fullName>Family Contact</fullName>
            </value>
            <value>
                <fullName>Business Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>